--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -172,6 +172,8 @@ outputs:
       missing_dso_whitelist:  # [win]
         - '**/MSVCR71.dll'  # [win]
         - '**/MSVCR80.dll'  # [win]
+        # I have no idea why this is not in C:\Windows\System32\downlevel
+        - '**/api-ms-win-core-path-l1-1-0.dll'  # [win]
     requirements:
       build:
         - {{ compiler('c') }}
