--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,8 @@
 {% set version = "3.9.0" %}
-{% set dev = "rc2" %}
-{% set dev_ = "rc2_" %}
+# {% set dev = "rc2" %}
+# {% set dev_ = "rc2_" %}
+{% set dev = "" %}
+{% set dev_ = "" %}
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
@@ -44,7 +46,7 @@ source:
 {% else %}
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}/
-    md5: 3e34e48b479f4beec2c0c80fdbde52a2
+    md5: 6ebfe157f6e88d9eabfbaf3fa92129f6
 {% endif %}
     patches:
       - patches/0000-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch
@@ -149,8 +151,11 @@ outputs:
       skip: True            # [win and int(float(vc)) < 14]
       skip_compile_pyc:
         - '*.py'            # [osx and arm64]
-      # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
+{% if 'conda-forge' in channel_targets %}
       string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% else %}
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}
+{% endif %}
 {% if 'conda-forge' in channel_targets %}
       run_exports:
         noarch:
@@ -195,9 +200,9 @@ outputs:
         - pkg-config  # [not win]
         # configure script looks for llvm-ar for lto
         - llvm-tools  # [osx]
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
+        - ld_impl_{{ target_platform }}  # [linux]
 {% if 'conda-forge' in channel_targets %}
-        - binutils_impl_{{ target_platform }} >=2.34  # [linux]
+        - binutils_impl_{{ target_platform }}  # [linux]
 {% endif %}
       host:
         - bzip2  # [not win]
@@ -209,9 +214,9 @@ outputs:
         - tk  # [not win]
         - ncurses  # [unix]
         - libffi  # [not win]
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
+        - ld_impl_{{ target_platform }}  # [linux]
       run:
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
+        - ld_impl_{{ target_platform }}  # [linux]
         # - tzdata # We need to discuss a canonical source for this package that comes from a non-python pkg
 {% if 'conda-forge' in channel_targets %}
         - ncurses  # [unix]
@@ -297,9 +302,11 @@ outputs:
         - gxx_linux-64  # [linux64]
         - gxx_linux-aarch64  # [linuxaarch64]
         - gxx_linux-ppc64le  # [linuxppc64le]
-
-      # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% if 'conda-forge' in channel_targets %}
+    string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% else %}
+    string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}
+{% endif %}
     requirements:
       build:
         - {{ compiler('c') }}
