--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,37 @@
-{% set version = "3.8.5" %}
+{% set version = "3.9.0" %}
+# {% set dev = "rc2" %}
+# {% set dev_ = "rc2_" %}
+{% set dev = "" %}
+{% set dev_ = "" %}
+{% set ver2 = '.'.join(version.split('.')[0:2]) %}
+{% set ver2nd = ''.join(version.split('.')[0:2]) %}
+{% set ver3nd = ''.join(version.split('.')[0:3]) %}
+
+# Sanitize build system env. var tweak parameters
+# (passed to the build scripts via script_env).
+{% set from_source_control = os.environ.get('CONDA_BUILD_FROM_SOURCE_CONTROL', '') %}
+{% if from_source_control == '' or from_source_control == 'no' %}
+  {% set from_source_control = 'no' %}
+{% else %}
+  {% set from_source_control = 'yes' %}
+{% endif %}
 {% set linkage_nature = os.environ.get('PY_INTERP_LINKAGE_NATURE', '') %}
-{% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
 {% if linkage_nature != '' %}
   {% set linkage_nature = "_" ~ linkage_nature %}
 {% endif %}
-{% if debug != '' %}
-  {% set debug = "_d" ~ debug %}
+{% if linkage_nature == 'shared' %}
+  {% set linkage_nature_env = 'shared' %}
+{% else %}
+  {% set linkage_nature_env = 'static' %}
+{% endif %}
+{% set dbg_abi = '' %}
+{% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
+{% if debug != '' and debug != 'no' %}
+  {% set py_interp_debug = "yes" %}
+  {% set debug = "_dbg" %}
+  {% set dbg_abi = "d" %}  # [win]
+{% else %}
+  {% set py_interp_debug = "no" %}
 {% endif %}
 
 package:
@@ -13,44 +39,47 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tar.xz
-    # md5 from: https://www.python.org/downloads/release/python-385/
-    md5: 35b5a3d0254c1c59be9736373d429db7
+{% if from_source_control == 'yes' %}
+  - git_url: https://github.com/python/CPython.git
+    git_tag: v{{ version }}{{ dev }}
+{% else %}
+  - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
+    # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}/
+    md5: 6ebfe157f6e88d9eabfbaf3fa92129f6
+{% endif %}
     patches:
       - patches/0000-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch
-{% if 'conda-forge' not in channel_targets %}
-      - patches/0001-Add-Anaconda-Distribution-version-logic.patch
-{% endif %}
-      - patches/0002-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch
-      - patches/0003-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
-      - patches/0004-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch
-      - patches/0005-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
-      - patches/0006-Support-cross-compiling-byte-code.patch
-      - patches/0007-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
-      - patches/0008-Darwin-Look-in-sysroot-usr-lib-include-if-sysroot-is.patch
-      - patches/0009-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
-      - patches/0010-Win32-Do-not-download-externals.patch
-      - patches/0011-Add-support-for-_CONDA_PYTHON_SYSCONFIGDATA_NAME-if-.patch
-      - patches/0012-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
-      - patches/0013-Disable-new-dtags-in-unixccompiler.py.patch
-      - patches/0014-Fix-cross-compilation-on-Debian-based-distros.patch
-      - patches/0015-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
-      - patches/0016-Unvendor-openssl.patch
-      - patches/0017-Unvendor-sqlite3.patch
-      # https://bugs.python.org/issue35644
-      - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
-      - patches/0019-Win-Add-back-the-DLLSuffix-used-to-find-the-openssl-.patch
-      - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
-      - patches/0021-roll-back-2e33ecd-for-py_compile.main.patch
-      # Python 3.8 is pretty broken without this.
-      - patches/0022-Add-CondaEcosystemModifyDllSearchPath.patch
-      - patches/0026-Revert-part-of-https-bugs.python.org-issue33895-http.patch
-      - patches/0027-cross-compile-darwin.patch
-      - patches/gh21114.patch
-      - patches/gh21241.patch
-      - patches/gh21228.patch
-      - patches/gh21564.patch  # [osx and arm64]
-
+      - patches/0001-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch
+      - patches/0002-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
+      - patches/0003-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch
+      - patches/0004-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
+      - patches/0005-Support-cross-compiling-byte-code.patch
+      - patches/0006-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
+      - patches/0007-Darwin-Look-in-sysroot-usr-lib-include-if-sysroot-is.patch
+      - patches/0008-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
+      - patches/0009-Win32-Do-not-download-externals.patch
+      - patches/0010-Add-support-for-_CONDA_PYTHON_SYSCONFIGDATA_NAME-if-.patch
+      - patches/0011-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
+      - patches/0012-Disable-new-dtags-in-unixccompiler.py.patch
+      - patches/0013-Fix-cross-compilation-on-Debian-based-distros.patch
+      - patches/0014-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
+      - patches/0015-Unvendor-openssl.patch
+      - patches/0016-Unvendor-sqlite3.patch
+      - patches/0017-venv-Revert-a-change-from-https-github.com-python-cp.patch
+      - patches/0018-Win-Add-back-the-DLLSuffix-used-to-find-the-openssl-.patch
+      - patches/0019-Use-ranlib-from-env-if-env-variable-is-set.patch
+      - patches/0020-Add-CondaEcosystemModifyDllSearchPath.patch
+      - patches/0021-Add-d1trimfile-SRC_DIR-to-make-pdbs-more-relocatable.patch
+      - patches/0022-Doing-d1trimfile.patch
+      - patches/0023-egg-debugging-with-Windows-debug-builds.patch
+      - patches/0024-Add-CONDA_DLL_SEARCH_MODIFICATION_KEEP_GIL-to-aid-de.patch
+      - patches/0025-cross-compile-darwin.patch
+      - patches/0026-BPO-41101-Support-arm64-in-Mac-Tools-pythonw.patch
+      - patches/0027-ctypes-check-_dyld_shared_cache_contains_path-in-fin.patch
+      - patches/0028-fix-test_macholib-for-Mac-OS-11.patch
+      - patches/0029-Xcode-12-Beta-4-declares-_dyld_shared_cache_contains.patch
+      - patches/0030-gh21564.patch
+  
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
@@ -83,52 +112,87 @@ source:
     sha256: 4872e72e188a5aa1124db0c3b163a4163e84ead359a514d86dd7c6fa2d2ff02a         # [win]
 
 build:
-  number: 9
-  script_env:
-    - PY_INTERP_LINKAGE_NATURE
-    - PY_INTERP_DEBUG
+  number: 0
+
+requirements:
+  build:
+{% if from_source_control == 'yes' %}
+    - git
+{% else %}
+    - patch  # [not win]
+    - m2-patch  # [win]
+    - m2-gcc-libs  # [win]
+{% endif %}
 
 outputs:
   - name: python
+    script: build_base.sh  # [unix]
+    script: build_base.bat  # [win]
     build:
+      number: 0
       activate_in_script: True
       # Windows has issues updating python if conda is using files itself.
       # Copy rather than link.
       no_link:
         - DLLs/_ctypes.pyd  # [win]
-      # We delete the shared libraries.
       ignore_run_exports:   # [unix]
+        # We delete the shared bzip2 library
         - bzip2             # [unix]
-      # Disabled until new conda-build release
+        # C++ only installed so CXX is defined for distutils/sysconfig.
+        # It would be nice to split ignore_run_exports into two:
+        # ignore_run_exports/from and ignore_run_exports/of, that way
+        # we could just use ignore_run_exports/from: {{ compiler('cxx') }}
+        # here instead of this nonsense:
+        - clangxx_osx-64  # [osx]
+        - clangxx_osx-aarch64  # [osxaarch64]
+        - gxx_linux-64  # [linux64]
+        - gxx_linux-aarch64  # [linuxaarch64]
+        - gxx_linux-ppc64le  # [linuxppc64le]
+      # Disabled until verified to work correctly
       detect_binary_files_with_prefix: True
       # detect_binary_files_with_prefix: False
       # binary_has_prefix_files:
-      #   - lib/libpython3.8.*.1.0
-      #   - bin/python3.8  # [linux]
-      #   - lib/libpython3.8.a  # [linux]
-      #   - lib/libpython3.8.nolto.a  # [linux]
+      #   - lib/libpython{{ ver2 }}.*.1.0
+      #   - bin/python{{ ver2 }}  # [linux]
+      #   - lib/libpython{{ ver2 }}.a  # [linux]
+      #   - lib/libpython{{ ver2 }}.nolto.a  # [linux]
       #   - lib/libpython3.so  # [linux]
-      #   - lib/python3.8/lib-dynload/_hashlib.cpython-38-x86_64-linux-gnu.so  # [linux]
+      #   - lib/python{{ ver2 }}/lib-dynload/_hashlib.cpython-{{ ver2nd }}-x86_64-linux-gnu.so  # [linux]
       #   - lib/libpython3.dylib  # [osx]
       # match python.org compiler standard
       skip: True            # [win and int(float(vc)) < 14]
       skip_compile_pyc:
         - '*.py'            # [osx and arm64]
-      # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% if 'conda-forge' in channel_targets %}
+      string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% else %}
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}
+{% endif %}
+{% if 'conda-forge' in channel_targets %}
       run_exports:
         noarch:
           - python
         weak:
-          - python_abi 3.8.* *_cp38
-    # Not until: https://github.com/mingwandroid/conda-build/commit/c68a7d100866df7a3e9c0e3177fc7ef0ff76def9
-    # {% if 'conda-forge' not in channel_targets %}
-    #      - CONDA_FORGE=yes
-    # {% else %}
-    #      - CONDA_FORGE=no
-    # {% endif %}
-    script: build_base.sh  # [unix]
-    script: build_base.bat  # [win]
+          - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
+{% endif %}
+      script_env:
+        - PY_INTERP_LINKAGE_NATURE={{ linkage_nature_env }}
+        - PY_INTERP_DEBUG={{ py_interp_debug }}
+        # Putting these here means they get emitted to build_env_setup.{sh,bat} meaning we can launch IDEs
+        # after sourcing or calling that script without examine the contents of conda_build.{sh,bat} for
+        # important env. vars.
+        - 'OPENSSL_DIR=%PREFIX%\Library'  # [win]
+        - 'SQLITE3_DIR=%PREFIX%\Library'  # [win]
+{% if 'conda-forge' in channel_targets %}
+        - CONDA_FORGE=yes
+{% else %}
+        - CONDA_FORGE=no
+{% endif %}
+      missing_dso_whitelist:  # [win]
+        - '**/MSVCR71.dll'  # [win]
+        - '**/MSVCR80.dll'  # [win]
+        # I have no idea why this is not in C:\Windows\System32\downlevel
+        - '**/api-ms-win-core-path-l1-1-0.dll'  # [win]
     requirements:
       build:
         - {{ compiler('c') }}
@@ -137,15 +201,14 @@ outputs:
         - {{ cdt('libx11-devel') }}  # [linux]
         - {{ cdt('libuuid-devel') }}  # [linux and not (ppc64le or aarch64)]
         - make  # [not win]
+        - libtool  # [unix]
         - pkg-config  # [not win]
         # configure script looks for llvm-ar for lto
         - llvm-tools  # [osx]
-        - patch  # [not win]
-        - m2-patch  # [win]
-        - posix  # [win]
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
-        - binutils_impl_{{ target_platform }} >=2.34  # [linux]
-        - libtool  # [unix]
+        - ld_impl_{{ target_platform }}  # [linux]
+{% if 'conda-forge' in channel_targets %}
+        - binutils_impl_{{ target_platform }}  # [linux]
+{% endif %}
       host:
         - bzip2  # [not win]
         - sqlite
@@ -154,26 +217,30 @@ outputs:
         - openssl
         - readline  # [not win]
         - tk  # [not win]
-        - ncurses  # [linux]
+        - ncurses  # [unix]
         - libffi  # [not win]
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
+        - ld_impl_{{ target_platform }}  # [linux]
       run:
-        - ld_impl_{{ target_platform }} >=2.34  # [linux]
+        - ld_impl_{{ target_platform }}  # [linux]
+        # - tzdata # We need to discuss a canonical source for this package that comes from a non-python pkg
+{% if 'conda-forge' in channel_targets %}
+        - ncurses  # [unix]
       run_constrained:
-        - python_abi 3.8.* *_cp38
+        - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
+{% endif %}
     test:
+      downstreams:
+        - cython
+        - setuptools
       requires:
         - ripgrep
         - cmake
         - ninja
-        - cython
-        - setuptools
         - {{ compiler('c') }}
         # Tried to use enable_language(C) to avoid needing this. It does not work.
         - {{ compiler('cxx') }}
       files:
         - tests/distutils/*
-        - tests/distutils.cext/*
         - tests/cmake/*
         - tests/cython/*
         - tests/prefix-replacement/*
@@ -193,6 +260,8 @@ outputs:
         - set "TEMP=%CONDA_PREFIX%/tmp"  # [win]
         - mkdir "%TEMP%"  # [win]
         - python -Im ensurepip --upgrade --default-pip  # [win]
+        # tzdata/zoneinfo test that will need the tzdata package to pass
+        # - python -c "from zoneinfo import ZoneInfo; from datetime import datetime; dt = datetime(2020, 10, 31, 12, tzinfo=ZoneInfo('America/Los_Angeles')); print(dt.tzname())"
         - python -m venv test-venv
         - python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [not win]
         -  _CONDA_PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [linux64]
@@ -215,10 +284,6 @@ outputs:
         -     python setup.py install -v -v
         -     python -c "import foobar"
         -   popd
-        -   pushd distutils.cext
-        -     python setup.py install -v -v
-        -     python -c "import greet; greet.greet('Python user')" | rg "Hello Python"
-        -   popd
         -   pushd prefix-replacement  # [unix]
         -     bash build-and-test.sh  # [unix]
         -   popd  # [unix]
@@ -230,17 +295,30 @@ outputs:
         - test ! -f default.profraw   # [osx]
 
   - name: libpython-static
-    build:
-      activate_in_script: True
-      # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
     script: build_static.sh  # [unix]
     script: build_static.bat  # [win]
+    build:
+      number: 0
+      activate_in_script: True
+      ignore_run_exports:
+        - python_abi
+        - clangxx_osx-64  # [osx64]
+        - clangxx_osx-aarch64  # [osxaarch64]
+        - gxx_linux-64  # [linux64]
+        - gxx_linux-aarch64  # [linuxaarch64]
+        - gxx_linux-ppc64le  # [linuxppc64le]
+{% if 'conda-forge' in channel_targets %}
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+{% else %}
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}
+{% endif %}
     requirements:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - posix  # [win]
+{% if from_source_control == 'yes' %}
+        - git
+{% endif %}
       host:
         - {{ pin_subpackage('python', exact=True) }}
       run:
@@ -268,6 +346,7 @@ about:
   dev_url: https://docs.python.org/devguide/
 
 extra:
+  feedstock-name: python
   recipe-maintainers:
     - isuruf
     - jakirkham
