--- a/.ci_support/osx_arm64_target_platformosx-arm64.yaml
+++ b/.ci_support/osx_arm64_target_platformosx-arm64.yaml
@@ -18,12 +18,16 @@ libffi:
 - '3.2'
 macos_machine:
 - arm64-apple-darwin20.0.0
+ncurses:
+- '6.2'
 openssl:
 - 1.1.1
 pin_run_as_build:
   bzip2:
     max_pin: x
   libffi:
+    max_pin: x.x
+  ncurses:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
