--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -77,7 +77,8 @@ source:
       - patches/0028-fix-test_macholib-for-Mac-OS-11.patch
       - patches/0029-Xcode-12-Beta-4-declares-_dyld_shared_cache_contains.patch
       - patches/0030-gh21564.patch
-  
+      - patches/0031-gh21228.patch
+
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
