--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 *.diff binary
 meta.yaml text eol=lf
 build.sh text eol=lf
+recipe/tests/prefix-replacement/build-and-test.sh text eof=lf
 bld.bat text eol=crlf
 
 # github helper pieces to make some files not show up in diffs automatically
