Move python_abi to this feedstock

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -296,9 +296,10 @@ outputs:
         - test ! -f default.profraw   # [osx]
 
   - name: python_abi
+    version: {{ ver2 }}
     build:
       number: {{ build_number }}
-      string: {{ build_number }}_{{ ver2nd }}
+      string: {{ build_number }}_cp{{ ver2nd }}
     requirements:
       run:
         - python {{ version }}.*
