--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -227,7 +227,7 @@ outputs:
 {% if 'conda-forge' in channel_targets %}
         - ncurses  # [unix]
       run_constrained:
-        - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
+        - python_abi {{ ver2 }}.* {{ build_number }}_cp{{ ver2nd }}
 {% endif %}
     test:
       downstreams:
