Add patch for https://bugs.python.org/issue42015

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -80,6 +80,7 @@ source:
       - patches/0030-gh21564.patch
       - patches/0031-gh21228.patch
       - patches/0032-Fix-TZPATH-on-windows.patch
+      - patches/0033-gh22674.patch
 
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
