--- a/.ci_support/linux_64_target_platformlinux-64.yaml
+++ b/.ci_support/linux_64_target_platformlinux-64.yaml
@@ -43,7 +43,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.8'
+- '3.9'
 readline:
 - '8.0'
 sqlite:
@@ -54,5 +54,8 @@ tk:
 - '8.6'
 xz:
 - '5.2'
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1.2'
