--- a/.ci_support/linux_ppc64le_target_platformlinux-ppc64le.yaml
+++ b/.ci_support/linux_ppc64le_target_platformlinux-ppc64le.yaml
@@ -41,7 +41,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.8'
+- '3.9'
 readline:
 - '8.0'
 sqlite:
@@ -50,5 +50,8 @@ target_platform:
 - linux-ppc64le
 xz:
 - '5.2'
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1.2'
