--- a/.ci_support/osx_64_target_platformosx-64.yaml
+++ b/.ci_support/osx_64_target_platformosx-64.yaml
@@ -45,7 +45,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.8'
+- '3.9'
 readline:
 - '8.0'
 sqlite:
@@ -56,5 +56,8 @@ tk:
 - '8.6'
 xz:
 - '5.2'
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1.2'
