MNT: Re-rendered with conda-build 3.20.3, conda-smithy 3.8.2, and conda-forge-pinning 2020.10.13.19.09.25

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @isuruf @jakirkham @jjhelmus @mingwandroid @msarahan @ocefpaf @pelson @scopatz
+* @isuruf @jakirkham @jjhelmus @mbargull @mingwandroid @msarahan @ocefpaf @pelson @scopatz
