--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,5 +6,5 @@ cxx_compiler:                  # [win]
   - vs2017                     # [win]
 vc:                            # [win]
   - 14.1                       # [win]
-MACOSX_SDK_VERSION:            # [osx]
-- '10.15'                      # [osx]
+MACOSX_SDK_VERSION:            # [osx and x86]
+- '10.15'                      # [osx and x86]
