--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,23 +1,23 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '10'
+- '9'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '10'
+- '9'
+docker_image:
+- quay.io/condaforge/linux-anvil-comp7
 libffi:
 - '3.2'
-macos_machine:
-- x86_64-apple-darwin13.4.0
 ncurses:
 - '6.2'
 openssl:
@@ -51,7 +51,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 tk:
 - '8.6'
 xz:
