--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -1,27 +1,23 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 bzip2:
 - '1'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- '11'
 channel_sources:
-- conda-forge
+- conda-forge/label/rust_dev,conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '7'
-docker_image:
-- condaforge/linux-anvil-aarch64
+- '11'
 libffi:
 - '3.2'
+macos_machine:
+- arm64-apple-darwin20.0.0
 ncurses:
 - '6.2'
 openssl:
@@ -55,7 +51,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
+- osx-arm64
 tk:
 - '8.6'
 xz:
