--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,5 +1,9 @@
 python:
   - 3.9
+python_impl:
+  - cpython
+numpy:
+  - 1.16
 c_compiler:                    # [win]
   - vs2017                     # [win]
 cxx_compiler:                  # [win]
