Use latest SDK to build

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,3 +12,5 @@ vc:                            # [win]
   - 14.1                       # [win]
 channel_targets:               # [not (osx and arm64)]
   - conda-forge python_rc      # [not (osx and arm64)]
+MACOSX_SDK_VERSION:            # [osx and x86_64]
+  - 10.15                      # [osx and x86_64]
