[skip ci] [ci skip] ***NO_CI*** Make recipe rerenderable

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,10 +1,6 @@
-python:                        # [win]
-  - 3.7                        # [win]
-c_compiler:                    # [win]
-  - vs2017                     # [win]
-cxx_compiler:                  # [win]
-  - vs2017                     # [win]
-vc:                            # [win]
-  - 14.1                       # [win]
-fortran_compiler_version:      # [win]
-  - 2019.0.0                   # [win]
+python:
+  - 3.7
+python_impl:
+  - cpython
+numpy:
+  - 1.16
