--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set base_version = "3.7.9" %}
+{% set base_version = "3.7.5" %}
 {% set version = base_version %}
 {% set linkage_nature = os.environ.get('PY_INTERP_LINKAGE_NATURE', '') %}
 {% if linkage_nature != '' %}
@@ -12,7 +12,7 @@ package:
 source:
   - url: https://www.python.org/ftp/python/{{ base_version }}/Python-{{ version }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-379/
-    md5: 389d3ed26b4d97c741d9e5423da1f43b
+    md5: 08ed8030b1183107c48f2092e79a87e2
     patches:
       # https://bugs.python.org/issue40263
       - patches/0000-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch
@@ -33,13 +33,13 @@ source:
       - patches/0013-Disable-new-dtags-in-unixccompiler.py.patch
       - patches/0014-Fix-cross-compilation-on-Debian-based-distros.patch
       - patches/0015-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
-      - patches/0016-Unvendor-openssl.patch
-      - patches/0017-Unvendor-sqlite3.patch
-      # https://bugs.python.org/issue35644
-      - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
+      - patches/0016-Unvendor-openssl.patch  # [win]
+      - patches/0017-Unvendor-sqlite3.patch  # [win]
 {% if 'conda-forge' not in channel_targets %}
       - patches/0019-Add-CondaEcosystemModifyDllSearchPath.patch
 {% endif %}
+      # https://bugs.python.org/issue35644
+      - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
       - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
